2007-07-11  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon.desktop.in (Exec): Use gnomesu since we must
	run as root.

	* lib/config.py.in (DIRECTORIES_TO_IGNORE): Add .beagle

2007-04-16  Funda Wang  <fundawang@gmail.com>

	* lib/userdb.py: gettext format fix.

2007-04-12  Federico Mena Quintero  <federico@novell.com>

	* Merged the debug-log branch into trunk (its ChangeLog follows):

2007-04-12  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/sabayon-apply: Import userprofile before the rest, so
	it can do its weird pygtk assertions.

2007-04-10  Federico Mena Quintero  <federico@novell.com>

	* admin-tool/changeswindow.py (ChangesWindow.__on_ignore_toggled):
	Log a user action.
	(ChangesWindow.__on_mandatory_toggled): Likewise.

	* admin-tool/lockdown/maindialog.py
	(PessulusMainDialog.__on_unsafeprotocols_toggled): Log a user action.

	* admin-tool/lockdown/disabledapplets.py
	(PessulusDisabledApplets.toggle_value): Log a user action.

	* admin-tool/lockdown/simpleeditabletreeview.py
	(PessulusSimpleEditableTreeview.__on_cell_edited): Log a user
	action.
	(PessulusSimpleEditableTreeview.__on_add_button_clicked): Likewise.
	(PessulusSimpleEditableTreeview.__on_edit_button_clicked): Likewise.
	(PessulusSimpleEditableTreeview.__on_remove_button_clicked): Likewise.

	* admin-tool/lockdown/lockdowncheckbutton.py
	(PessulusLockdownCheckbutton.__on_lockdownbutton_toggled): Log a
	user action.
	(PessulusLockdownCheckbutton.__on_check_toggled): Likewise.

	* admin-tool/sessionwindow.py
	(SessionWindow.__handle_enforce_mandatory): Ahem, pass the
	"active" parameter to profile.set_enforce_mandatory().

2007-04-09  Federico Mena Quintero  <federico@novell.com>

	* lib/errors.py: Oops, import gtk for gtk.main_quit() in
	catch_exceptions().
	(FatalApplyErrorException.wrapper): Oops, return the func()'s
	own return value.

	* lib/debuglog.py (DEBUG_LOG_DOMAIN_PESSULUS): New debug domain.
